# langchain-api

./: .env  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
.langchain_api/workspace/pdf_files/knowledge_bases/demo-user/67c09306eb334e05912f212cde67b73a/: 23b9c59530e24947b4ef04c10f3986a5_Quick_Start.txt
frontend/: chat_app.js  chat_styles.css  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/utils/: weather.ts
frontend/components/: ChatInterface.module.css  ChatInterface.tsx
frontend/components/chat-interface/: ChatView.tsx  CreateKnowledgeBaseModal.tsx  KnowledgeManagementView.tsx  Pagination.tsx  ReasoningCard.tsx  ToolCard.tsx  constants.ts  types.ts  utils.ts
frontend_old/: chat_app.js  index.html
langchain_api/: agent.py  constant.py  elastic_graph_rag.py  elastic_utils.py  endpoint.py  main.py  middleware.py  retriever.py  settings.py  settting.py  utils.py
langchain_api/agent/: agent.py  agentscope_runtime_main.py  context.py  graph.py  main.py  state.py  utils.py
langchain_api/api/: __init__.py  endpoints.py
langchain_api/backend/: open_sandbox.py
langchain_api/middleware/: __init__.py  common.py  plan.py  rag.py  sandbox_system_tool.py  tool_search.py
langchain_api/middleware/sandbox/: sandbox_system_tool.py  skills.py  summarization.py
langchain_api/patch/: langchain.py
langchain_api/rag/: __init__.py  context.py  elastic_graph_rag.py  elastic_utils.py  knowledge_base.py  main.py  management_api.py  retriever.py  service.py  text_splitter.py
langchain_api/sandbox/: open_sandbox.py
langchain_api/tools/: __init__.py  sandbox.py  weather.py  web_fetch.py
langchain_api/tools/cron/: __init__.py  cron_manager.py  cron_tool.py
workspace/skills/image-generation/: SKILL.md
workspace/skills/image-generation/scripts/: generate_image.py
workspace/skills/news/: SKILL.md
