[project]
name = "langchain-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.19.3",
    "fastapi>=0.127.0",
    "langchain>=1.2.0",
    "langchain-elasticsearch>=1.0.0",
    "langchain-openai>=1.1.6",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
