[project]
name = "langchain-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.4",
    "elasticsearch>=8.19.3",
    "fastapi>=0.115.0,<0.116.0",
    "langchain>=1.2.10",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-tavily>=0.2.17",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "tzdata>=2025.3",
    "langchain-deepseek>=1.0.1",
    "crawl4ai>=0.8.0",
    "copilotkit>=0.1.78",
    "ag-ui-langgraph>=0.0.28",
    "ag-ui-protocol>=0.1.13",
    "opensandbox-server>=0.1.6",
    "opensandbox-code-interpreter>=0.1.1",
    "langgraph-checkpoint-postgres>=3.0.4",
    "openinference-instrumentation-langchain>=0.1.62",
    "arize-phoenix-otel>=0.15.0",
    "sqlmodel>=0.0.22",
    "apscheduler>=3.11.0",
    "langchain-text-splitters>=1.1.2",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "pandas>=3.0.2",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

# [tool.uv.sources]
# ag-ui-langgraph = { git = "https://github.com/ag-ui-protocol/ag-ui.git", subdirectory = "integrations/langgraph/python" }
# ag-ui-protocol = { git = "https://github.com/ag-ui-protocol/ag-ui.git", subdirectory = "sdks/python" }
